--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,10 +13,34 @@ jobs:
         node-version: [18.x, 20.x, 22.x]
     steps:
       - uses: actions/checkout@v4
+
+      # Detect where package.json lives (root or inside devops_lab2_actions_correct)
+      - name: Pick project root
+        id: pickroot
+        run: |
+          if [ -f package.json ]; then
+            echo "root=." >> $GITHUB_OUTPUT
+          elif [ -f devops_lab2_actions_correct/package.json ]; then
+            echo "root=devops_lab2_actions_correct" >> $GITHUB_OUTPUT
+          else
+            echo "No package.json found" >&2
+            ls -la
+            exit 1
+          fi
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install --no-audit --no-fund
-      - run: npm run build --if-present
-      - run: npm test
+
+      - name: Install
+        run: npm install --no-audit --no-fund
+        working-directory: ${{ steps.pickroot.outputs.root }}
+
+      - name: Build
+        run: npm run build --if-present
+        working-directory: ${{ steps.pickroot.outputs.root }}
+
+      - name: Test
+        run: npm test
+        working-directory: ${{ steps.pickroot.outputs.root }}
